# Flam_Project

./: .gitignore  README.md  check-ndk.ps1  gradle.properties  install-opencv.ps1  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedetector/: CameraRenderer.kt  GLRenderer.kt  GLTexture.kt  JNIWrapper.kt  MainActivity.kt  ShaderUtils.kt
app/src/main/res/layout/: activity_main.xml
jni/: CMakeLists.txt  native-lib.cpp
jni/include/opencv/: README.txt
web/: index.html  index.ts  tsconfig.json
